--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
                                 programming </strong> which are clearly open source
                         </p>
                         <p><a href="#" class="resume"><i class="icon-documents"></i> Read my resume here</a></p>
+			    <div class="sharethis-inline-share-buttons"></div>
                     </div>
                 </div>
 
